--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AndroidPasswordManager</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_authentication">AuthenticationActivity</string>
 </resources>
